<resources>
    <string name="app_name">Smk Negeri 2 SoE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_home">HOME</string>
    <string name="menu_berita">BERITA</string>
    <string name="menu_acara">ACARA</string>
    <string name="menu_kalender">KALENDER</string>
    <string name="menu_info_sekolah">SMKN 2 SOE</string>
    <string name="menu_info_sekolah_title">INFO SEKOLAH</string>

    <string name="menu_info_sekolah_visi">VISI &amp; MISI</string>
    <string name="menu_info_sekolah_mayor">JURUSAN</string>
    <string name="menu_info_sekolah_award">PRESTASI</string>
    <string name="menu_info_sekolah_video">VIDEO</string>
    <string name="menu_info_sekolah_ekskul">EKSTRA KURIKULER</string>
    <string name="menu_info_sekolah_contact_location">LOKASI DAN KONTAK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_vision_mision">VisionMisionActivity</string>
    <string name="title_activity_location_contact">LocationContactActivity</string>
    <string name="title_activity_mayor">MayorActivity</string>
    <string name="title_activity_extra_kurikuler">ExtraKurikulerActivity</string>
    <string name="title_activity_award">AwardActivity</string>
    <string name="menu_info_guru_dan_pegawai">GURU DAN PEGAWAI</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_activity_detail_article">DetailArticleActivity</string>
    <string name="title_activity_suitcore">SuitcoreActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="help_string">
        <![CDATA[

<!-- NOTE: i changed all single-percent symbols to double-percent symbols b/c they were causing problems -->
<!-- SEE:  http://developer.android.com/guide/topics/resources/string-resource.html -->

<html>
<head>
<meta http-equiv="content-type" content="text/html; charset=UTF-8">
<title>your title</title>
</head>

<body>
<p style="text-align: justify;">Aplikasi ini terinspirasi dari&nbsp;<a href="https://play.google.com/store/apps/details?id=com.codelabs.unikomapps&amp;hl=en"><b>UNIKOM APPS</b></a> dan dibawah lisensi <a href="https://choosealicense.com/licenses/apache-2.0/"><b>Apache-2.0</b></a>. Adapun source code aplikasi dibuat open source (cek <a href="https://github.com/bayupaoh/smk-negeri2-soe-android"><b>di sini</b></a>)&nbsp;untuk kepentingan pengembangan aplikasi.</p>
</body>
</html>
        ]]>
    </string>
</resources>
